--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /programming/sem1/labs/lab1/lab1.iml
 /programming/sem1/labs/lab1/.idea/
 /programming/sem1/labs/lab1/out/
+/programming/sem1/labs/lab2/.idea/
+/programming/sem1/labs/lab2/out/
+/programming/sem1/labs/lab2/lab1.iml
+/OPD/sem1/labs/lab1/lab0/
