--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@
 
 
 /OPD/sem1/labs/lab1/lab0/
+
+
+/discrete math/sem1/tasks/.vscode
+/discrete math/sem1/tasks/chek_mn.py
+/discrete math/sem1/tasks/mn
+/discrete math/sem1/tasks/results/
+/discrete math/sem1/tasks/test_mn/
+/discrete math/sem1/tasks/dm_code/
