.gitignore change + some other

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@
 /OPD/sem1/labs/lab1/lab0/
 
 
-/discrete math/sem1/tasks/.vscode
-/discrete math/sem1/tasks/chek_mn.py
-/discrete math/sem1/tasks/mn
-/discrete math/sem1/tasks/results/
-/discrete math/sem1/tasks/test_mn/
-/discrete math/sem1/tasks/dm_code/
+/discrete math/sem1/tasks/task2/.vscode
+/discrete math/sem1/tasks/task2/chek_mn.py
+/discrete math/sem1/tasks/task2/mn
+/discrete math/sem1/tasks/task2/results/
+/discrete math/sem1/tasks/task2/test_mn/
+/discrete math/sem1/tasks/task2/dm_code/
