.gitignore another change

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@
 /OPD/sem1/labs/lab1/lab0/
 
 
-/discrete math/sem1/tasks/task2/.vscode
-/discrete math/sem1/tasks/task2/chek_mn.py
-/discrete math/sem1/tasks/task2/mn
-/discrete math/sem1/tasks/task2/results/
-/discrete math/sem1/tasks/task2/test_mn/
-/discrete math/sem1/tasks/task2/dm_code/
+/discrete_math/sem1/tasks/task2/.vscode
+/discrete_math/sem1/tasks/task2/chek_mn.py
+/discrete_math/sem1/tasks/task2/mn
+/discrete_math/sem1/tasks/task2/results/
+/discrete_math/sem1/tasks/task2/test_mn/
+/discrete_math/sem1/tasks/task2/dm_code/
