end code for por lab2

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /discrete_math/sem1/tasks/task2/results/
 /discrete_math/sem1/tasks/task2/test_mn/
 /discrete_math/sem1/tasks/task2/dm_code/
+/.vscode/
